syntax = "proto3";

package feed.v1;

service FeedService {
  // Guest feed: personalized feed based on filter
  rpc ListGuestFeed(ListGuestFeedRequest) returns (ListGuestFeedResponse);

  // Cast feed: cast's own posts for management
  rpc ListCastFeed(ListCastFeedRequest) returns (ListCastFeedResponse);
}

// Feed filter options for guest timeline
enum FeedFilter {
  FEED_FILTER_UNSPECIFIED = 0;
  FEED_FILTER_ALL = 1;        // Public posts + posts from followed casts
  FEED_FILTER_FOLLOWING = 2;  // Posts from followed casts only
  FEED_FILTER_FAVORITES = 3;  // Posts from favorited casts only
}

message FeedAuthor {
  string user_id = 1;
  string name = 2;
  string image_url = 3;
}

message FeedMedia {
  string id = 1;
  string media_type = 2; // "image" or "video"
  string url = 3;
  string thumbnail_url = 4;
  string media_id = 5; // Reference to media__files.id
}

message FeedPost {
  string id = 1;
  string cast_user_id = 2;
  string content = 3;
  repeated FeedMedia media = 4;
  string created_at = 5; // ISO8601
  FeedAuthor author = 6;
  int32 likes_count = 7;
  int32 comments_count = 8;
  string visibility = 9; // "public" or "private"
  repeated string hashtags = 10;
  bool liked = 11; // whether current user liked this post
}

message ListGuestFeedRequest {
  FeedFilter filter = 1;  // required: all/following/favorites
  int32 limit = 2;        // default: 20, max: 50
  string cursor = 3;      // optional, for pagination
}

message ListGuestFeedResponse {
  repeated FeedPost posts = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message ListCastFeedRequest {
  int32 limit = 1;        // default: 20, max: 50
  string cursor = 2;      // optional, for pagination
}

message ListCastFeedResponse {
  repeated FeedPost posts = 1;
  string next_cursor = 2;
  bool has_more = 3;
}
